[project]
name = "pydelhivery"
version = "0.1.0"
description = "Thin Python Wrapper for India's Biggest 3rd Party Logistics Service Provider"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
